adminer/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: adminer
  labels:
    name: adminer
