adminer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: adminer
spec:
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  selector:
    app: adminer
  ports:
  - name: adminer
    targetPort: 8080
    port: 8080
